--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="icon" type="img/png" href="<%= BASE_URL %>https://kingkrazee.github.io/host-/images/K-removebg-preview.png">
+    <title>My Portfolio</title>
   </head>
   <body>
     <noscript>
